Fixed overflow

--- a/site/style.scss
+++ b/site/style.scss
@@ -110,7 +110,7 @@ main{
 	left: 0;
 	width: calc(33% - #{$margin});
 	width: calc(100% / 3);
-	overflow-x: hidden;
+	// overflow-x: hidden;
 	padding: 0 $margin/2;
 	box-sizing: border-box;
 	// background: rgba(0,0,0,0.25);
